--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <title>My Site</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Magaly ATP - Under Construction</title>
   <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
     body {
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      height:100vh;
-      font-family:sans-serif;
-      background:#111;
-      color:white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #0b0b0b;
+      padding: 24px;
+    }
+    img {
+      max-width: min(900px, 100%);
+      max-height: 90vh;
+      width: auto;
+      height: auto;
+      border-radius: 12px;
+      box-shadow: 0 12px 40px rgba(0,0,0,0.6);
     }
   </style>
 </head>
 <body>
   <h1>🚧 Site Under Construction 🚧</h1>
+  <img src="images/under_construction.png" alt="Under Construction" />
 </body>
 </html>
