--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   </style>
 </head>
 <body>
-  <h1>🚧 Site Under Construction 🚧</h1>
+  <center><h1>🚧 Site Under Construction 🚧</h1></center>
+  <div>
   <img src="images/under_construction.png" alt="Under Construction" />
+  </div>
 </body>
 </html>
