--- a/index.html
+++ b/index.html
@@ -3,33 +3,48 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="Cache-Control" content="no-store" />
   <title>Magaly ATP - Under Construction</title>
+
   <style>
     html, body {
       height: 100%;
       margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      background: #0b0b0b;
     }
-    body {
+
+    .container {
+      height: 100%;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      background: #0b0b0b;
       padding: 24px;
+      text-align: center;
     }
+
+    h1 {
+      color: white;
+      font-weight: 600;
+      letter-spacing: 1px;
+      margin-bottom: 24px;
+      font-size: clamp(1.8rem, 3vw, 2.6rem);
+      text-shadow: 0 4px 18px rgba(0,0,0,0.6);
+    }
+
     img {
       max-width: min(900px, 100%);
-      max-height: 90vh;
-      width: auto;
-      height: auto;
+      max-height: 80vh;
       border-radius: 12px;
       box-shadow: 0 12px 40px rgba(0,0,0,0.6);
     }
   </style>
 </head>
 <body>
-  <center><h1>🚧 Site Under Construction 🚧</h1></center>
-  <div>
-  <img src="images/under_construction.png" alt="Under Construction" />
+  <div class="container">
+    <h1>🚧 Site Under Construction 🚧</h1>
+    <img src="images/under_construction.png" alt="Under Construction" />
   </div>
 </body>
 </html>
